2008-11-18  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new, revalidate): don't validate here, since the
			validation would only be for the TLS object, which may not be
			what's actually selected in the security combo

	* src/wireless-dialog.c
		- (internal_init, revalidate): instead, validate here from an idle
			handler to match revalidation done in nm-connection-editor.c.
			Fixes a bug introduced by the PKCS#12 support where the secrets
			dialog's OK button wouldn't be initially enabled

2008-11-15  Dan Williams  <dcbw@redhat.com>

	* configure.ac
	  src/Makefile.am
	  src/polkit-helpers/Makefile.am
	  src/polkit-helpers/README
	  src/polkit-helpers/polkit-gnome-action.c
	  src/polkit-helpers/polkit-gnome-action.h
	  src/polkit-helpers/polkit-gnome-auth.c
	  src/polkit-helpers/polkit-gnome-auth.h
	  src/polkit-helpers/polkit-gnome-context.c
	  src/polkit-helpers/polkit-gnome-context.h
	  src/polkit-helpers/polkit-gnome.h
		- Partial backport of PolicyKit-gnome 0.8 to PolicyKit 0.6

	* src/connection-editor/Makefile.am
	  src/connection-editor/nm-connection-editor.c
	  src/connection-editor/nm-connection-editor.h
	  src/connection-editor/nm-connection-list.c
		- Use polkit-helpers

	* src/connection-editor/polkit-06-helpers.c
	  src/connection-editor/polkit-06-helpers.h
		- Remove

2008-11-15  Dan Williams  <dcbw@redhat.com>

	* src/gconf-helpers/gconf-upgrade.c
		- (nm_gconf_read_0_6_wpa_settings, nm_gconf_read_0_6_eap_settings):
			fix up 0.6 GConf upgrades for WPA and LEAP

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* Really tag 0.7.0-rc2

	* Makefile.am
		- Fix dist problem with translatable destkop files

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* Tag 0.7.0-rc2

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wifi.c
		- (wireless_get_more_info): bring the secrets dialog to the front

2008-11-14  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/nm-connection-list.c