@@ -1,3 +1,9 @@
+2008-11-19  Dan Williams  <dcbw@redhat.com>
+
+	* src/gconf-helpers/nma-gconf-connection.c
+		- (nma_gconf_connection_changed): handle error returned from
+			nm_connection_replace_settings()
+
 2008-11-18  Dan Williams  <dcbw@redhat.com>
 
 	* src/wireless-security/eap-method-tls.c
